minor changes for aws adaptation